--- a/API_DB/API/package.json
+++ b/API_DB/API/package.json
@@ -8,6 +8,7 @@
     "body-parser": "^1.19.0",
     "chai": "^4.2.0",
     "chai-http": "^4.3.0",
+    "cors": "^2.8.5",
     "ejs": "^3.1.5",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
@@ -28,7 +29,7 @@
   },
   "scripts": {
     "test": "mocha",
-    "start": "node server.js"
+    "start": "node index.js"
   },
   "author": "Taneli Turpeinen",
   "license": "ISC"
