--- a/musasampo-frontend/package.json
+++ b/musasampo-frontend/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^5.11.5",
     "@testing-library/react": "^11.1.1",
     "@testing-library/user-event": "^12.2.0",
+    "base-64": "^1.0.0",
     "collection-visit": "^1.0.0",
     "firebase": "^8.0.0",
     "node-sass": "^4.14.1",
