--- a/musasampo-frontend/package.json
+++ b/musasampo-frontend/package.json
@@ -27,6 +27,8 @@
     "redux-persist": "^6.0.0",
     "reselect": "^4.0.0",
     "sass": "^1.29.0",
+    "styled-components": "^5.2.1",
+    "styled-content-loader": "^1.1.3",
     "use-sound": "^1.0.2",
     "web-vitals": "^0.2.4"
   },
