--- a/musasampo-frontend/package.json
+++ b/musasampo-frontend/package.json
@@ -5,15 +5,19 @@
   "dependencies": {
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
-    "@testing-library/jest-dom": "^5.11.5",
-    "@testing-library/react": "^11.1.1",
-    "@testing-library/user-event": "^12.2.0",
+    "@testing-library/jest-dom": "^5.11.6",
+    "@testing-library/react": "^11.2.2",
+    "@testing-library/user-event": "^12.2.2",
     "axios": "^0.21.0",
     "base-64": "^1.0.0",
+    "chat-engine": "^0.9.21",
+    "chat-engine-open-graph": "0.0.4",
     "collection-visit": "^1.0.0",
-    "file-saver": "^2.0.2",
-    "firebase": "^8.0.0",
+    "file-saver": "^2.0.5",
+    "firebase": "^8.1.1",
     "node-sass": "^4.14.1",
+    "pubnub": "^4.29.9",
+    "pubnub-react": "^2.0.0-rc.0",
     "react": "^17.0.1",
     "react-audio-player": "^0.14.0",
     "react-dom": "^17.0.1",
@@ -26,6 +30,8 @@
     "redux-persist": "^6.0.0",
     "reselect": "^4.0.0",
     "sass": "^1.29.0",
+    "styled-components": "^5.2.1",
+    "styled-content-loader": "^1.1.3",
     "use-sound": "^1.0.2",
     "web-vitals": "^0.2.4"
   },
