--- a/musasampo-frontend/package.json
+++ b/musasampo-frontend/package.json
@@ -3,11 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.11.0",
-    "@material-ui/icons": "^4.9.1",
+    "@material-ui/core": "^4.11.2",
+    "@material-ui/icons": "^4.11.2",
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
-    "@testing-library/user-event": "^12.2.2",
+    "@testing-library/user-event": "^12.4.0",
     "axios": "^0.21.0",
     "base-64": "^1.0.0",
     "chat-engine": "^0.9.21",
@@ -16,8 +16,8 @@
     "file-saver": "^2.0.5",
     "firebase": "^8.1.1",
     "node-sass": "^4.14.1",
-    "pubnub": "^4.29.9",
-    "pubnub-react": "^2.0.0-rc.0",
+    "pubnub": "^4.29.10",
+    "pubnub-react": "^2.0.0",
     "react": "^17.0.1",
     "react-audio-player": "^0.14.0",
     "react-dom": "^17.0.1",
