--- a/musasampo-frontend/package.json
+++ b/musasampo-frontend/package.json
@@ -36,6 +36,7 @@
     "styled-components": "^5.2.1",
     "styled-content-loader": "^1.1.3",
     "use-sound": "^1.0.2",
+    "uuid": "^8.3.2",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
